--- a/modulo4/formulario.html
+++ b/modulo4/formulario.html
@@ -29,7 +29,7 @@
                 <label for="calendario">Data de Nascimeto</label>
                 <input type="date" name="calendario" id="calendario" required>
 
-                <div class="conta">
+                <div class="checkbox-inline">
                     <label class="label" for="conta">Onde você possui conta:</label> 
                     <label for="Instagram"></label>
                     <input class="inline" type="checkbox" name="conta" id="Instagram"> Instagram
