--- a/modulo4/desafio2/index.html
+++ b/modulo4/desafio2/index.html
@@ -13,8 +13,17 @@
 <body>
     <div class="container">
         <h1>Login</h1>
-        <p>Enter your email address and 
-            password to access your account</p>
+        <p>
+            Enter your email address and password to access your account
+        </p>
+
+        <input type="email" name="email" id="email" placeholder="Email">
+        <input type="password" name="password" id="password" placeholder="Password" class="input-password">
+        <a href="#" class="forgot-password">Forgot Password?</a>
+
+        <button type="button">Login</button>
+
+        <a href="#" class="sing-up">Don’t have an account? <strong>Sign Up</strong></a>
     </div>
 </body>
 </html>
