create index.html and script.js

--- a/modulo7/getElementById/index.html
+++ b/modulo7/getElementById/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1 id="main-text">Meu primeiro site</h1>
 
+    <input type="text" name="my-input">
+
     <p class="paragraph">Meu parágrafo</p>
 
     <p class="paragraph">Segundo parágrafo</p>
