style selects, input and button

--- a/projeto-ConversorDeMoedas/index.html
+++ b/projeto-ConversorDeMoedas/index.html
@@ -18,7 +18,7 @@
 
         <main>
             <label for="real">
-                Converter de
+                Converter <strong>de</strong>
                 <select name="" id="real">
                     <option value="">
                         R$ Real Brasileiro
@@ -27,7 +27,7 @@
             </label>
 
             <label for="">
-                Converter para
+                Converter <strong>para</strong>
                 <select name="" id="">
                     <option value="">
                         US$ Dólar americano
@@ -40,7 +40,7 @@
             </label>
 
             <label for="value">
-                Valor
+                <strong>Valor</strong>
                 <input type="number" name="" id="value" placeholder="R$ 10.000,00">
             </label>
 
