--- a/projeto-ConversorDeMoedas/index.html
+++ b/projeto-ConversorDeMoedas/index.html
@@ -47,18 +47,18 @@
             <button type="button">Converter</button>
 
             <section>
-                <div>
+                <div class="currency-container">
                     <img src="assets/brasil.svg" alt="Real">
-                    <P>Real</P>
-                    <p>R$ 10.000,00</p>
+                    <p class="currency-name">Real</p>
+                    <p class="currency-value">R$ 10.000,00</p>
                 </div>
 
-                <img src="assets/seta.svg" alt="Seta">
+                <img class="arrow-img" src="assets/seta.svg" alt="Seta">
 
-                <div>
+                <div class="currency-container">
                     <img src="assets/estados-unidos.svg" alt="Dolar americano">
-                    <P>Dólar Americano</P>
-                    <p>US$ 2.000,00</p>
+                    <p class="currency-name">Dólar Americano</p>
+                    <p class="currency-value">US$ 2.000,00</p>
                 </div>
 
             </section>
