pegando o click do botão o valor do input e calculo da conversão

--- a/projeto-ConversorDeMoedas/index.html
+++ b/projeto-ConversorDeMoedas/index.html
@@ -39,12 +39,12 @@
                 </select>
             </label>
 
-            <label for="value">
+            <label for="input-real">
                 <strong>Valor</strong>
-                <input type="number" name="" id="value" placeholder="R$ 10.000,00">
+                <input type="number" name="" id="input-real" placeholder="R$ 10.000,00">
             </label>
 
-            <button type="button">Converter</button>
+            <button id="convert-button" type="button">Converter</button>
 
             <section>
                 <div class="currency-container">
