showing values in the section

--- a/projeto-ConversorDeMoedas/index.html
+++ b/projeto-ConversorDeMoedas/index.html
@@ -50,7 +50,7 @@
                 <div class="currency-container">
                     <img src="assets/brasil.svg" alt="Real">
                     <p class="currency-name">Real</p>
-                    <p class="currency-value">R$ 10.000,00</p>
+                    <p class="currency-value" id="real-value-text">R$ 10.000,00</p>
                 </div>
 
                 <img class="arrow-img" src="assets/seta.svg" alt="Seta">
@@ -58,7 +58,7 @@
                 <div class="currency-container">
                     <img src="assets/estados-unidos.svg" alt="Dolar americano">
                     <p class="currency-name">Dólar Americano</p>
-                    <p class="currency-value">US$ 2.000,00</p>
+                    <p class="currency-value" id="currency-value-text">US$ 2.000,00</p>
                 </div>
 
             </section>
