change image and text

--- a/projeto-ConversorDeMoedas/index.html
+++ b/projeto-ConversorDeMoedas/index.html
@@ -28,12 +28,12 @@
 
             <label for="">
                 Converter <strong>para</strong>
-                <select name="" id="">
-                    <option value="">
+                <select name="" id="currency-select">
+                    <option value="US$ Dólar americano">
                         US$ Dólar americano
                     </option>
 
-                    <option value="">
+                    <option value="€ Euro">
                         € Euro
                     </option>
                 </select>
@@ -56,8 +56,8 @@
                 <img class="arrow-img" src="assets/seta.svg" alt="Seta">
 
                 <div class="currency-container">
-                    <img src="assets/estados-unidos.svg" alt="Dolar americano">
-                    <p class="currency-name">Dólar Americano</p>
+                    <img src="assets/estados-unidos.svg" alt="Dolar americano" id="currency-image">
+                    <p class="currency-name" id="currency-name-text">Dólar Americano</p>
                     <p class="currency-value" id="currency-value-text">US$ 2.000,00</p>
                 </div>
 
