verificando se é dolar ou euro

--- a/projeto-ConversorDeMoedas/index.html
+++ b/projeto-ConversorDeMoedas/index.html
@@ -36,6 +36,10 @@
                     <option value="€ Euro">
                         € Euro
                     </option>
+
+                    <option value="Bitcoin">
+                        Bitcoin
+                    </option>
                 </select>
             </label>
 
